// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - placeholder 1`] = `
<div
  className="control"
>
  <div
    className="Select"
  >
    <AccentText>
      <select
        disabled={true}
        onChange={[Function]}
        value="test"
      />
    </AccentText>
  </div>
</div>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<div
  className="control"
>
  <div
    className="Select"
  >
    <AccentText>
      <select
        disabled={false}
        onChange={[Function]}
        value="test"
      />
    </AccentText>
  </div>
</div>
`;
